infrastructure/base/layer2/traefik/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: authelia-forwardauth
  namespace: traefik-system
spec:
  forwardAuth:
    address: http://authelia.app-authelia.svc:9091/api/authz/forward-auth?authelia_url=https://auth.cluster.arpa
    trustForwardHeader: true
    authResponseHeaders:
      - Remote-User
      - Remote-Groups
      - Remote-Email
      - Remote-Name
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: dashboard
  namespace: traefik-system

spec:
  entryPoints:
    - websecure

  routes:
    - match: Host(`traefik.cluster.arpa`)
      kind: Rule
      middlewares:
        - name: authelia-forwardauth
          namespace: traefik-system
      services:
        - name: dashboard
          namespace: traefik-system
          port: http
  tls:
    secretName: traefik-tls
